# postgres-api

./: .env.example  .gitignore  CLAUDE.md  README.md  claude project brief.md  docker-compose.yml  fix_admin_password.py  migracion_apuesta_cols_v2.sql  migracion_minuto_actual.sql  migracion_penales_partido.sql  migracion_user_nombre_telefono.sql  migrate_add_tabla.py  postman_collection.json  pyproject.toml  requirements.txt  seed_ventas.py  setup-venv.ps1  test_api.ps1
.claude/: launch.json  settings.local.json
alembic/: env.py
alembic/versions/: 2026_05_23_add_diccionario_table.py  9a020001a476_initial_schema_with_audit_logs.py
app/: main.py
app/api/: deps.py  permission.py  permissions.py
app/core/: audit_middleware.py  config.py  exceptions.py  logging.py  security.py
app/crud/: application.py  audit_log.py  base.py  diccionario.py  permission.py  role.py  sistema.py  user.py
app/db/: base.py  init_db.py  session.py
docker/: Dockerfile
documentacion/: migracion_monitor.sql
init-db/: 00_create_databases.sql  01_schema.sql  02_seed.sql
scripts/: create_superuser.py  seed_playoff_mundial.py  smoke_test.sh
static/: BECBUC-ADM-fases.html  BECBUC-ADM.html  BECBUC-movil.html  BECBUC-portal.html  BECBUC-pronos.html  api-reference.html  apostador.html  becbuc-live-playoffs-backup-sesion50.html  becbuc-live-playoffs.html  becbuc-live.html  build_pronos.py  cabecera_detalle.html  config_cabecera.html  diccionario.html  fixture.html  importar-apuestas.html  login.html  portal.html  tabla.html  tester.html  usuarios.html
tests/: conftest.py
(+59 files in other folders)
